--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -1,3 +1,7 @@
+body,h1,h2,h3 {
+  font-family: "Monda";
+}
+
 a {
     text-decoration: none;
   }
@@ -22,10 +26,12 @@ a {
     margin:10px auto;
     line-height:51px;
     vertical-align:middle;
-    text-align:center
+    text-align:center;
+    font-size: 60px;
   }
   #h2service{
-    font-size: 27px;
+    font-size: 32px;
+
   }
   #h1submit{
     margin:10px auto;
@@ -62,4 +68,18 @@ a {
   img:hover {
     opacity: 1;
     transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1);
+  }
+  .Mui-selected p{
+    font-weight: bold;
+    text-decoration: underline;
+    text-decoration-color: #D55534;
+  }
+  .carousel-wrapper {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  
+  .rec-carousel-item:focus {
+    outline: none;
+    box-shadow: inset 0 0 1px 0px violet;
   }
