--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -83,3 +83,11 @@ a {
     outline: none;
     box-shadow: inset 0 0 1px 0px violet;
   }
+  .serviceList{
+    display: grid;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+  }
+  @media (min-width: 600px) {
+    .serviceList { grid-template-columns: repeat(2, 1fr); }
+  }
